app/aks/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample
  labels:
    azure.workload.identity/use: "true"
