app/aks/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-sample
  namespace: sample
spec:
  type: ClusterIP
  selector:
    app: aks-sample
  ports:
    - name: http
      port: 80
      targetPort: 8080
