app/aks/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-sample
  namespace: sample
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    appgw.ingress.kubernetes.io/request-timeout: "30"
spec:
  rules:
    - http:
        paths:
          - path: /aks
            pathType: Prefix
            backend:
              service:
                name: aks-sample
                port:
                  number: 80
